--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             padding: 0;
         }
         #app {
-            width: 1200px;
+            width: 100%;
             margin: 100px auto;
             display: flex;
             justify-content: center;
@@ -26,7 +26,7 @@
         tinymce.init({
             selector: '#mytextarea',
             language: 'zh_CN',
-            width: 600,
+            width: 800,
             height: 300,
             plugins: [
                 'advlist autolink link image lists charmap print preview hr anchor pagebreak spellchecker',
